--- a/cosii/cosii_lab1/mainwindow.ui
+++ b/cosii/cosii_lab1/mainwindow.ui
@@ -6,22 +6,102 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>450</width>
-    <height>300</height>
+    <width>837</width>
+    <height>511</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>ЦОСиИ лаб. 1</string>
   </property>
   <widget class="QWidget" name="centralWidget">
+   <widget class="QSpinBox" name="binSpinBox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>110</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
+    </property>
+    <property name="value">
+     <number>190</number>
+    </property>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>10</y>
+      <width>16</width>
+      <height>491</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="openButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Open</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="adjustButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>470</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Adjust</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="binLabel">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Binarization:</string>
+    </property>
+   </widget>
    <widget class="QLabel" name="imageLabel">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>30</y>
-      <width>41</width>
-      <height>20</height>
+      <x>124</x>
+      <y>50</y>
+      <width>700</width>
+      <height>450</height>
      </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="text">
      <string/>
@@ -33,26 +113,26 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>0</y>
-      <width>41</width>
-      <height>21</height>
+      <x>270</x>
+      <y>10</y>
+      <width>61</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="minimum">
-     <number>1</number>
+     <number>2</number>
     </property>
     <property name="maximum">
      <number>10</number>
     </property>
    </widget>
-   <widget class="QLabel" name="infoLabel">
+   <widget class="QLabel" name="clasterNumLabel">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>0</y>
-      <width>46</width>
-      <height>20</height>
+      <x>210</x>
+      <y>10</y>
+      <width>53</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -65,10 +145,10 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>51</width>
-      <height>21</height>
+      <x>120</x>
+      <y>10</y>
+      <width>85</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -78,23 +158,202 @@
      <bool>false</bool>
     </property>
    </widget>
-  </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>450</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>File</string>
+   <widget class="QLabel" name="binLabel_1">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>90</y>
+      <width>81</width>
+      <height>20</height>
+     </rect>
     </property>
-    <addaction name="actionOpen"/>
+    <property name="text">
+     <string>Threshold</string>
+    </property>
    </widget>
-   <addaction name="menuFile"/>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>150</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="gaussLabel">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>170</y>
+      <width>91</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Gauss:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="gaussLabel_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>200</y>
+      <width>91</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Sigma X</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="gaussSigmaXSpinBox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>220</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>500</number>
+    </property>
+    <property name="value">
+     <number>3</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="gaussLabel_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>270</y>
+      <width>91</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Sigma Y</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="gaussSigmaYSpinBox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>290</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>500</number>
+    </property>
+    <property name="value">
+     <number>3</number>
+    </property>
+   </widget>
+   <widget class="Line" name="line_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>330</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="gaussLabel_4">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>350</y>
+      <width>91</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Median:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="gaussLabel_5">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>380</y>
+      <width>91</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Kernel</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="medianKernelSpinBox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>400</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>15</number>
+    </property>
+    <property name="singleStep">
+     <number>2</number>
+    </property>
+    <property name="value">
+     <number>1</number>
+    </property>
+   </widget>
+   <zorder>binLabel</zorder>
+   <zorder>clasterSpinBox</zorder>
+   <zorder>clasterNumLabel</zorder>
+   <zorder>detectButton</zorder>
+   <zorder>imageLabel</zorder>
+   <zorder>binSpinBox</zorder>
+   <zorder>line</zorder>
+   <zorder>openButton</zorder>
+   <zorder>adjustButton</zorder>
+   <zorder>binLabel_1</zorder>
+   <zorder>line_2</zorder>
+   <zorder>gaussLabel</zorder>
+   <zorder>gaussLabel_2</zorder>
+   <zorder>gaussSigmaXSpinBox</zorder>
+   <zorder>gaussLabel_3</zorder>
+   <zorder>gaussSigmaYSpinBox</zorder>
+   <zorder>line_3</zorder>
+   <zorder>gaussLabel_4</zorder>
+   <zorder>gaussLabel_5</zorder>
+   <zorder>medianKernelSpinBox</zorder>
   </widget>
   <action name="actionOpen">
    <property name="text">
